Kubernetes/Service/Ingress/nginx-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: nginx-demo.com
      http:
        paths:
        - path: /
          pathtype: prefix
          backend: 
            service: 
              name: nginx-service
              port:
                 number: 8082
