Kubernetes/Service/Ingress/todo-ingress-host-based.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress-host-based
spec:
  rules:
  - host: todo-ui.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-ui-service
            port:
              number: 3001
  - host: todo-api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-api-service
            port:
              number: 8080
